--- a/page/compare_members/render.yaml
+++ b/page/compare_members/render.yaml
@@ -2,10 +2,10 @@ services:
   - type: web
     name: baekilha
     env: python
-    buildCommand: ""
+    buildCommand: pip install -r requirements.txt
     startCommand: gunicorn compare_members.wsgi:application
     envVars:
       - key: DJANGO_SETTINGS_MODULE
-        value: compare_members.settings
+        value: page.compare_members.settings
       - key: PYTHON_VERSION
         value: 3.11
