--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: baekilha
     env: python
-    buildCommand: pip install -r ../../requirements.txt
+    buildCommand: pip install -r requirements.txt
     startCommand: gunicorn compare_members.wsgi:application
     envVars:
       - key: DJANGO_SETTINGS_MODULE
