--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: baekilha
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn compare_members.wsgi:application
+    startCommand: gunicorn compare_members.wsgi
     envVars:
       - key: DJANGO_SETTINGS_MODULE
         value: compare_members.settings
